--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,9 @@
 </head>
 <body>
   <app-root></app-root>
+  <script type="text/javascript" src="https://www.simplify.com/commerce/v1/simplify.js"></script>
+  <script>
+    window['SimplifyCommerce'] = SimplifyCommerce;
+  </script>
 </body>
 </html>
