importing the facebook sdk to get user access token for getting the list of admin pages

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 <body>
   <app-root></app-root>
   <script type="text/javascript" src="https://www.simplify.com/commerce/v1/simplify.js"></script>
+  <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
   <script>
     window['SimplifyCommerce'] = SimplifyCommerce;
   </script>
